--- a/templates/invoices/invoice.html
+++ b/templates/invoices/invoice.html
@@ -108,7 +108,7 @@
                         <table class="table">
                             <tr>
                                 <td>{% trans 'Payment method' %}</td>
-                                <td>{{ invoice.payment_method }}</td>
+                                <td>{{ invoice.payment_method_verbose }}</td>
                             </tr>
                         </table>
                     </div>
