--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -5,11 +5,36 @@
 
 <html ng-app="SimpleERP">
     <head>
-        <script type="text/javascript" src="{% static 'angularjs/angular.min.js' %}"></script>
+        {# ### CSS ### #}
+        {# Bootstrap Core #}
+        <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+
+        {# ### JavaScript ###  #}
+        {# AngularJS Core #}
+        <script type="text/javascript" src="{% static 'angularjs/angular.js' %}"></script>
+        {# AngularJS Extensions #}
+        <script type="text/javascript" src="{% static 'angularjs/angular-route.js' %}"></script>
+        {# App scripts #}
         <script type="text/javascript" src="{% static 'simpleerp/SimpleERP.js' %}"></script>
+        <script type="text/javascript" src="{% static 'simpleerp/js/routing.js' %}"></script>
+        <script type="text/javascript" src="{% static 'simpleerp/js/controllers.js' %}"></script>
     </head>
 
-    <body ng-controller="ExampleController">
-        {% block content %}{% endblock %}
+    <base href="/">
+
+    <body>
+        <div class="container">
+            <h1>SimpleERP</h1>
+            <hr>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    {% include 'frontend/menu.html' %}
+                </div>
+                <div class="col-md-9" ng-view></div>
+            </div>
+        </div>
     </body>
 </html>
