--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -6,6 +6,6 @@
         {{ test }}
 
         <input type="text" ng-model="TestModel">
-        <p>{{ TestModel }}</p>
+        <p>{{ TestModel + 1 }}</p>
     {% endverbatim %}
 {% endblock %}
