--- a/templates/invoices/invoice.html
+++ b/templates/invoices/invoice.html
@@ -65,7 +65,7 @@
                         {% endif %}
 
                         {{ invoice.issued_for.address_street }},
-                        {{ invoice.issued_for.address_postcode }} {{ invoice.issued_by.address_city }}<br>
+                        {{ invoice.issued_for.address_postcode }} {{ invoice.issued_for.address_city }}<br>
                         {{ invoice.issued_for.address_country_verbose }}
                     </div>
                 </div>
